--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Profil_KnaufzylinderRout.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Profil_KnaufzylinderRout.cshtml
@@ -119,7 +119,7 @@
                                     <img src="@("/Image/options.png")" height="30" width="30" />
                                 </a>
                             </td>
-                            <td id="rowTable" class="table-info"><a href="@Url.Action("Delete_Doppelzylinder","Home", new { item.Id })"><img src="@("/Image/entfernen.png")" height="30" width="30" /></a></td>
+                            <td id="rowTable" class="table-info"><a href="@Url.Action("Delete_KnayfZylinder","Home", new { item.Id })"><img src="@("/Image/entfernen.png")" height="30" width="30" /></a></td>
                         }
 
                     </tr>
